syntax = "proto3";

package backup.v1;

option go_package = "github.com/Wei-Shaw/sub2api/internal/backup/proto/backup/v1;backupv1";

service BackupService {
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc UpdateConfig(UpdateConfigRequest) returns (UpdateConfigResponse);
  rpc ListSourceProfiles(ListSourceProfilesRequest) returns (ListSourceProfilesResponse);
  rpc CreateSourceProfile(CreateSourceProfileRequest) returns (CreateSourceProfileResponse);
  rpc UpdateSourceProfile(UpdateSourceProfileRequest) returns (UpdateSourceProfileResponse);
  rpc DeleteSourceProfile(DeleteSourceProfileRequest) returns (DeleteSourceProfileResponse);
  rpc SetActiveSourceProfile(SetActiveSourceProfileRequest) returns (SetActiveSourceProfileResponse);
  rpc ValidateS3(ValidateS3Request) returns (ValidateS3Response);
  rpc ListS3Profiles(ListS3ProfilesRequest) returns (ListS3ProfilesResponse);
  rpc CreateS3Profile(CreateS3ProfileRequest) returns (CreateS3ProfileResponse);
  rpc UpdateS3Profile(UpdateS3ProfileRequest) returns (UpdateS3ProfileResponse);
  rpc DeleteS3Profile(DeleteS3ProfileRequest) returns (DeleteS3ProfileResponse);
  rpc SetActiveS3Profile(SetActiveS3ProfileRequest) returns (SetActiveS3ProfileResponse);
  rpc CreateBackupJob(CreateBackupJobRequest) returns (CreateBackupJobResponse);
  rpc ListBackupJobs(ListBackupJobsRequest) returns (ListBackupJobsResponse);
  rpc GetBackupJob(GetBackupJobRequest) returns (GetBackupJobResponse);
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string version = 2;
  int64 uptime_seconds = 3;
}

message SourceConfig {
  string host = 1;
  int32 port = 2;
  string user = 3;
  string password = 4;
  string database = 5;
  string ssl_mode = 6;
  string addr = 7;
  string username = 8;
  int32 db = 9;
  string container_name = 10;
}

message S3Config {
  bool enabled = 1;
  string endpoint = 2;
  string region = 3;
  string bucket = 4;
  string access_key_id = 5;
  string secret_access_key = 6;
  string prefix = 7;
  bool force_path_style = 8;
  bool use_ssl = 9;
}

message BackupConfig {
  string source_mode = 1;
  string backup_root = 2;
  string sqlite_path = 3;
  int32 retention_days = 4;
  int32 keep_last = 5;
  SourceConfig postgres = 6;
  SourceConfig redis = 7;
  S3Config s3 = 8;
  string active_s3_profile_id = 9;
  string active_postgres_profile_id = 10;
  string active_redis_profile_id = 11;
}

message GetConfigRequest {}

message GetConfigResponse {
  BackupConfig config = 1;
}

message UpdateConfigRequest {
  BackupConfig config = 1;
}

message UpdateConfigResponse {
  BackupConfig config = 1;
}

message SourceProfile {
  string source_type = 1;
  string profile_id = 2;
  string name = 3;
  bool is_active = 4;
  SourceConfig config = 5;
  bool password_configured = 6;
  string created_at = 7;
  string updated_at = 8;
}

message ListSourceProfilesRequest {
  string source_type = 1;
}

message ListSourceProfilesResponse {
  repeated SourceProfile items = 1;
}

message CreateSourceProfileRequest {
  string source_type = 1;
  string profile_id = 2;
  string name = 3;
  SourceConfig config = 4;
  bool set_active = 5;
}

message CreateSourceProfileResponse {
  SourceProfile profile = 1;
}

message UpdateSourceProfileRequest {
  string source_type = 1;
  string profile_id = 2;
  string name = 3;
  SourceConfig config = 4;
}

message UpdateSourceProfileResponse {
  SourceProfile profile = 1;
}

message DeleteSourceProfileRequest {
  string source_type = 1;
  string profile_id = 2;
}

message DeleteSourceProfileResponse {}

message SetActiveSourceProfileRequest {
  string source_type = 1;
  string profile_id = 2;
}

message SetActiveSourceProfileResponse {
  SourceProfile profile = 1;
}

message ValidateS3Request {
  S3Config s3 = 1;
}

message ValidateS3Response {
  bool ok = 1;
  string message = 2;
}

message S3Profile {
  string profile_id = 1;
  string name = 2;
  bool is_active = 3;
  S3Config s3 = 4;
  bool secret_access_key_configured = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ListS3ProfilesRequest {}

message ListS3ProfilesResponse {
  repeated S3Profile items = 1;
}

message CreateS3ProfileRequest {
  string profile_id = 1;
  string name = 2;
  S3Config s3 = 3;
  bool set_active = 4;
}

message CreateS3ProfileResponse {
  S3Profile profile = 1;
}

message UpdateS3ProfileRequest {
  string profile_id = 1;
  string name = 2;
  S3Config s3 = 3;
}

message UpdateS3ProfileResponse {
  S3Profile profile = 1;
}

message DeleteS3ProfileRequest {
  string profile_id = 1;
}

message DeleteS3ProfileResponse {}

message SetActiveS3ProfileRequest {
  string profile_id = 1;
}

message SetActiveS3ProfileResponse {
  S3Profile profile = 1;
}

message CreateBackupJobRequest {
  string backup_type = 1;
  bool upload_to_s3 = 2;
  string triggered_by = 3;
  string idempotency_key = 4;
  string s3_profile_id = 5;
  string postgres_profile_id = 6;
  string redis_profile_id = 7;
}

message BackupArtifact {
  string local_path = 1;
  int64 size_bytes = 2;
  string sha256 = 3;
}

message BackupS3Object {
  string bucket = 1;
  string key = 2;
  string etag = 3;
}

message BackupJob {
  string job_id = 1;
  string backup_type = 2;
  string status = 3;
  string triggered_by = 4;
  string idempotency_key = 5;
  bool upload_to_s3 = 6;
  string started_at = 7;
  string finished_at = 8;
  string error_message = 9;
  BackupArtifact artifact = 10;
  BackupS3Object s3_object = 11;
  string s3_profile_id = 12;
  string postgres_profile_id = 13;
  string redis_profile_id = 14;
}

message CreateBackupJobResponse {
  BackupJob job = 1;
}

message ListBackupJobsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string status = 3;
  string backup_type = 4;
}

message ListBackupJobsResponse {
  repeated BackupJob items = 1;
  string next_page_token = 2;
}

message GetBackupJobRequest {
  string job_id = 1;
}

message GetBackupJobResponse {
  BackupJob job = 1;
}
